@@ -114,6 +114,13 @@ public:
 	 **/
 	float getSpringDampingRatio() const;
 
+	/**
+	 * Gets the axis unit vector, relative to body1.
+	 * @returns The X component of the axis unit vector.
+	 * @returns The Y component of the axis unit vector.
+	 **/
+	int getAxis(lua_State *L);
+
 private:
 
 	// The Box2D wheel joint object.
